--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.13",
     "@vercel/analytics": "^1.0.2",
     "cloudinary": "^1.32.0",
+    "dotenv": "^16.3.1",
     "eslint-config-next": "^13.0.1",
     "framer-motion": "^7.6.4",
     "imagemin": "^8.0.1",
