--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
     "next": "latest",
+    "next-cloudinary": "^4.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.0.0",
